# AndroidUtils

./: .gitignore  LICENSE  README.md  build.gradle
androidutils/: bintray.gradle  build.gradle
androidutils/src/main/: AndroidManifest.xml
androidutils/src/main/jni-source-utils/serialport/: RS485Serial.cpp  serialport.cpp
androidutils/src/main/res-utils/xml/: provider_paths.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/org/tcshare/app/: App.java  (+1 more)
app/src/main/jni-source-utils/serialport/: CMakeLists.txt  RS485Serial.cpp  RS485Serial.h
app/src/main/res-public/layout/: activity_container.xml  activity_drag2rightexit.xml  activity_live_like.xml  activity_main.xml  activity_tc_container.xml  activity_tc_drag2rightexit.xml  activity_tc_main.xml  fragment_empty.xml  fragment_rv_list.xml  item_rvlist.xml
app/src/main/res-public/values/: styles.xml
app/src/main/res-utils/layout/: fragment_webview.xml  item_selectpic_showphoto.xml
app/src/main/res-utils/values/: strings-utils.xml  strings.xml  styles-utils.xml
app/src/main/res/layout/: activity_main.xml  activity_normal.xml  activity_zxing.xml
app/src/main/res/values/: colors.xml  colors_zxing.xml  string_zxing.xml  strings.xml  styles.xml
framework-modify/: 系统修改.txt
gradle/wrapper/: gradle-wrapper.properties
utils/: build.gradle
utils/src/main/: AndroidManifest.xml
utils/src/main/java/org/tcshare/: Constant.java
utils/src/main/res/layout/: activity_splash.xml  dialog_bottom_container.xml  dialog_bottom_group.xml
utils/src/main/res/values/: strings.xml  styles.xml
(+172 files in other folders)
